# netferry

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  netferry-desktop-build.yml  notarize.yml  release.yml  unit-test.yml
docs/: multiprofile-design.md  relay-design.md
netferry/: __main__.py
netferry-desktop/: README.md  index.html  package-lock.json  package.json
netferry-desktop/scripts/: build_mac_local.sh  build_sidecar.py  build_windows_local.sh
netferry-desktop/src/: App.tsx  api.ts  drag.module.css  index.css  main.tsx  types.ts  windows-chrome.module.css
netferry-desktop/src-tauri/: Cargo.toml  build.rs  com.hoveychen.netferry.helper.plist  com.hoveychen.netferry.helper2.plist  entitlements.plist  helper-entitlements.plist  sidecar-entitlements.plist  tauri.conf.json  tauri.dev.conf.json
netferry-desktop/src-tauri/binaries/: netferry-tunnel-aarch64-apple-darwin
netferry-desktop/src-tauri/capabilities/: default.json
netferry-desktop/src-tauri/icons/: icon.icns
netferry-desktop/src-tauri/src/: commands.rs  crypto.rs  groups.rs  helper_ipc.rs  lib.rs  logging.rs  main.rs  menu.rs  migrate_v2.rs  models.rs  priorities.rs  profiles.rs  settings.rs  sidecar.rs  smappservice.m  ssh_config.rs  stats.rs  traceroute.rs  tray.rs
netferry-desktop/src/components/: ConnectionErrorDialog.tsx  ConnectionPage.tsx  ConnectionPanel.tsx  DestinationsPage.tsx  DiagnosticsPage.tsx  FirstLaunchWizard.tsx  GlobalSettingsPage.tsx  GroupEditorPage.tsx  HelperSetupGuide.tsx  ImportProfileDialog.tsx  NewProfileDialog.tsx  ProfileDetailPage.tsx  ProfileEditor.tsx  ProfileList.tsx  QrCodeExportDialog.tsx  SshConfigImporter.tsx  (+2 more)
netferry-mobile/: DESIGN.md
netferry-mobile/android/: .gitignore  README.md  settings.gradle.kts
netferry-mobile/ios/: README.md
netferry-relay/: .gitignore  Makefile  go.mod  go.sum  server  test_integration.sh
netferry-relay/mobile/: Makefile  config.go  crypto.go  embed.go  engine.go  protect.go  setnonblock_other.go  setnonblock_windows.go  stack.go  tools.go  tun.go  tun_test.go  tunnel.go
scripts/: build-android.sh  build_mac_local.sh  build_sidecar.py  build_windows_local.sh  run_tui_dev.sh  sync-ios-version.sh
(+172 files in other folders)
