[package]
name = "netferry-desktop"
version = "0.1.0"
description = "NetFerry Desktop App"
authors = ["hoveychen"]
edition = "2021"
default-run = "netferry-desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "netferry_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "netferry-desktop"
path = "src/main.rs"

[[bin]]
name = "netferry-helper"
path = "src/bin/netferry_helper.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
simplelog = "0.12"
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
local-ip-address = "0.6"

